Bugfix: missing background-colour on homepage main header

--- a/frontend/resources/public/css/style.landing-page.css
+++ b/frontend/resources/public/css/style.landing-page.css
@@ -95,6 +95,9 @@
 /*
  * Header
  */
+.main-header {
+    background-color: white;
+}
 .masthead-brand {
     margin-top: 10px;
     margin-bottom: 10px;
